# android-ndk-rutabagas

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README  build.gradle  force_stop_app.sh
cmake/Modules/: Makefile  RuAddCFlag.cmake  RuAddCXXFlag.cmake  RuAddCompilerFlagsCommon.cmake  RuAddCompilerFlagsGen.py  RuAddSpirV.cmake  RuCheckCAttribute.cmake  RuCheckCXXAttribute.cmake  RuCheckCompilerAttributeGen.py
gradle/wrapper/: gradle-wrapper.properties
src/: CMakeLists.txt
src/android_native_app_glue/: CMakeLists.txt
src/main/: CMakeLists.txt  quad.frag.glsl  quad.vert.glsl  ru_app.c  ru_app.h  ru_media.c  ru_media.h  ru_rend.c  ru_rend.h
src/util/: CMakeLists.txt  alloc.c  alloc.h  attribs.h  build.gradle  check.c  check.h  log.h  macros.h  ru_chan.c  ru_chan.h  ru_math.h  ru_ndk.c  ru_ndk.h  ru_queue.c  ru_queue.h  ru_thread.h
